--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="1.js"></script>
+    <title>Linking Of JAVA SCRIPT</title>
 </head>
-<body>
-    <h1>1st Program</h1>
+<body style="background-color:rgb(229, 255, 0)">
+    <h1 style="color: red;"> 
+        Create external JavaScript file with the extension .js.
+         After creating, add it to the HTML file in the script tag. 
+         The src attribute is used to include that external JavaScript file.
+         e.g. External javascript file (script.js) is linked using script tag in the src attribute.</h1>
+    <p>
+        Below image is screenshot of js file content. Also it can be viewed 
+        by opening the console.
+    </p>
+    <img src="img.png" style="height: 330px; width: 550px;">
+    <script src="1.js">
+
+    </script>
+    
 </body>
 </html>
